@@ -1,0 +1,20 @@
+25
+
+
+            #
+          #####
+            #
+      ,,,  $$$  ,,,
+ ,,=$   \"$$$$$\"   $=,,
+,$$        $$$        $$,
+*>         <*>         <*
+$$         $$$         $$
+"$$        $$$        $$"
+ "$$       $$$       $$"
+  *#########*#########*
+  *#########*#########*
+
+
+    Veni, Vidi, Vici!
+I came, I saw, I conquered!
+
